--- a/streamlit_bokeh_events/frontend/package.json
+++ b/streamlit_bokeh_events/frontend/package.json
@@ -1,24 +1,20 @@
 {
-  "name": "streamlit_component_template",
-  "version": "0.1.0",
+  "name": "streamlit_bokeh_events",
+  "version": "0.1.3",
   "private": true,
   "dependencies": {
-    "@bokeh/bokehjs": "^2.0.0",
+    "@bokeh/bokehjs": "^2.4.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "@types/hoist-non-react-statics": "^3.3.1",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
-    "apache-arrow": "^0.17.0",
-    "bootstrap": "^4.4.1",
-    "event-target-shim": "^5.0.1",
-    "hoist-non-react-statics": "^3.3.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
+    "streamlit-component-lib": "^1.3.0",
     "typescript": "~3.7.2"
   },
   "scripts": {
