--- a/.gitignore
+++ b/.gitignore
@@ -163,7 +163,6 @@ chrome-user-data
 *.swp
 *.swo
 
-
 packages/react-devtools-core/dist
 packages/react-devtools-extensions/chrome/build
 packages/react-devtools-extensions/chrome/*.crx
@@ -175,3 +174,7 @@ packages/react-devtools-extensions/shared/build
 packages/react-devtools-extensions/.tempUserDataDir
 packages/react-devtools-inline/dist
 packages/react-devtools-shell/dist
+
+# javascript/typescipt packaging files
+package-lock.json
+yarn.lock
