browser target constraints lessened to avoid nullish coalescence issue.
see create-react-app #9468 for more detail

--- a/streamlit_bokeh_events/frontend/package.json
+++ b/streamlit_bokeh_events/frontend/package.json
@@ -26,17 +26,10 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "browserslist": {
-    "production": [
+  "browserslist": [
       ">0.2%",
       "not dead",
       "not op_mini all"
     ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
   "homepage": "."
 }
